--- a/app_kotlin_ui/src/main/res/layout/activity_main.xml
+++ b/app_kotlin_ui/src/main/res/layout/activity_main.xml
@@ -381,7 +381,7 @@
 
                 <EditText
                     android:id="@+id/gatewayInput"
-                    android:text="sberbank"
+                    android:text="bank"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
@@ -392,7 +392,7 @@
 
                 <EditText
                     android:id="@+id/gatewayMerchantIdInput"
-                    android:text="sbersafe_test"
+                    android:text="safe_test"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
